--- a/client/package.json
+++ b/client/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "fsd",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
-    "start": "next start -p 3001",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.29.0",
-    "axios": "^1.6.8",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "typescript": "^5"
-  }
+    "name": "fsd",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 3001",
+        "build": "next build",
+        "start": "next start -p 3001",
+        "lint": "next lint",
+        "pre_check": "prettier --check --ignore-path .gitignore .",
+        "pre_write": "prettier --write --ignore-path .gitignore ."
+    },
+    "dependencies": {
+        "@tanstack/react-query": "^5.29.0",
+        "axios": "^1.6.8",
+        "next": "14.1.4",
+        "prettier": "^3.2.5",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.2"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.4",
+        "typescript": "^5"
+    }
 }
